{
  "version": 4,
  "terraform_version": "1.3.0",
  "serial": 217,
  "lineage": "1ec88bd2-d5ff-9ece-faed-527b34a3702e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ansible-apache-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-026b57f3c383c2eec",
            "arn": "arn:aws:ec2:us-east-1:072873244107:instance/i-07cf8900c25f7b61f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07cf8900c25f7b61f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "etcss",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02cf4e962c7494295",
            "private_dns": "ip-172-20-10-29.ec2.internal",
            "private_ip": "172.20.10.29",
            "public_ip": "44.197.204.233",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0aedb1c0673ca2421",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06c5520b3db241e0f",
            "tags": {
              "Name": "ansible-apache-server"
            },
            "tags_all": {
              "Name": "ansible-apache-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08092666018605ece"
            ]
          },
          "dependencies": [
            "aws_security_group.mylab-sg",
            "aws_subnet.mylab-subnet-1",
            "aws_vpc.mylab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ansible-controlplane",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-026b57f3c383c2eec",
            "arn": "arn:aws:ec2:us-east-1:072873244107:instance/i-0c5880c16baacab8d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c5880c16baacab8d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "etcss",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00fb485051b6b3125",
            "private_dns": "ip-172-20-10-12.ec2.internal",
            "private_ip": "172.20.10.12",
            "public_ip": "3.236.52.210",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01d69155925aa123e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06c5520b3db241e0f",
            "tags": {
              "Name": "ansible-controlplane"
            },
            "tags_all": {
              "Name": "ansible-controlplane"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08092666018605ece"
            ]
          },
          "dependencies": [
            "aws_security_group.mylab-sg",
            "aws_subnet.mylab-subnet-1",
            "aws_vpc.mylab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "docker-host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-026b57f3c383c2eec",
            "arn": "arn:aws:ec2:us-east-1:072873244107:instance/i-01cbfa0e803e586d9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01cbfa0e803e586d9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "etcss",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-072a9d0883f572172",
            "private_dns": "ip-172-20-10-222.ec2.internal",
            "private_ip": "172.20.10.222",
            "public_ip": "3.238.236.251",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01cbfd8d36ff6b0c5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06c5520b3db241e0f",
            "tags": {
              "Name": "docker-host"
            },
            "tags_all": {
              "Name": "docker-host"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08092666018605ece"
            ]
          },
          "dependencies": [
            "aws_security_group.mylab-sg",
            "aws_subnet.mylab-subnet-1",
            "aws_vpc.mylab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-026b57f3c383c2eec",
            "arn": "arn:aws:ec2:us-east-1:072873244107:instance/i-0d8ead2adbe59d818",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d8ead2adbe59d818",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "etcss",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00e3823ee011bfa8a",
            "private_dns": "ip-172-20-10-33.ec2.internal",
            "private_ip": "172.20.10.33",
            "public_ip": "34.238.190.231",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cefa161e25ee8b38",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06c5520b3db241e0f",
            "tags": {
              "Name": "jenkins-server"
            },
            "tags_all": {
              "Name": "jenkins-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08092666018605ece"
            ]
          },
          "dependencies": [
            "aws_security_group.mylab-sg",
            "aws_subnet.mylab-subnet-1",
            "aws_vpc.mylab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "mylab-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:072873244107:internet-gateway/igw-003c3d8188bc89b9e",
            "id": "igw-003c3d8188bc89b9e",
            "owner_id": "072873244107",
            "tags": {
              "Name": "mylab-igw"
            },
            "tags_all": {
              "Name": "mylab-igw"
            },
            "vpc_id": "vpc-0b87b7fe853b6006b"
          },
          "dependencies": [
            "aws_vpc.mylab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "mylab-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:072873244107:route-table/rtb-016366d94f5dc266d",
            "id": "rtb-016366d94f5dc266d",
            "owner_id": "072873244107",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-003c3d8188bc89b9e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mylab-rtb"
            },
            "tags_all": {
              "Name": "mylab-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b87b7fe853b6006b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.mylab-igw",
            "aws_vpc.mylab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mylab-assn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0df27684e4d58aa9d",
            "route_table_id": "rtb-016366d94f5dc266d",
            "subnet_id": "subnet-06c5520b3db241e0f"
          },
          "dependencies": [
            "aws_internet_gateway.mylab-igw",
            "aws_route_table.mylab-rtb",
            "aws_subnet.mylab-subnet-1",
            "aws_vpc.mylab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mylab-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:072873244107:security-group/sg-08092666018605ece",
            "description": "to allow inbound and outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08092666018605ece",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "mylab-sg",
            "name_prefix": "",
            "owner_id": "072873244107",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mylab-sg"
            },
            "tags_all": {
              "Name": "mylab-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b87b7fe853b6006b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.mylab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mylab-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:072873244107:subnet/subnet-06c5520b3db241e0f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "172.20.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06c5520b3db241e0f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "072873244107",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mylab-subnet-1"
            },
            "tags_all": {
              "Name": "mylab-subnet-1"
            },
            "vpc_id": "vpc-0b87b7fe853b6006b"
          },
          "dependencies": [
            "aws_vpc.mylab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mylab-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:072873244107:subnet/subnet-047bc6357309e7f58",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "172.20.20.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-047bc6357309e7f58",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "072873244107",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mylab-subnet-2"
            },
            "tags_all": {
              "Name": "mylab-subnet-2"
            },
            "vpc_id": "vpc-0b87b7fe853b6006b"
          },
          "dependencies": [
            "aws_vpc.mylab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mylab-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:072873244107:vpc/vpc-0b87b7fe853b6006b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/16",
            "default_network_acl_id": "acl-0a85991bf8899f773",
            "default_route_table_id": "rtb-0a0cfd7217a3d4a7d",
            "default_security_group_id": "sg-0f92ec8a0cf7f5e2f",
            "dhcp_options_id": "dopt-46ce473c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0b87b7fe853b6006b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a0cfd7217a3d4a7d",
            "owner_id": "072873244107",
            "tags": {
              "Name": "mylab-vpc"
            },
            "tags_all": {
              "Name": "mylab-vpc"
            }
          }
        }
      ]
    }
  ]
}